# auto-research-agent

./: .env.example  .gitignore  CHANGELOG.md  Makefile  PROJECT_UPDATE.md  README.md  REAL_PROVIDER_SMOKE.md  TEST_AND_NEXT_STEPS.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  literature_survey_mode.md  quickstart_zh.md  runbook_zh.md
docs/examples/: literature_survey_example.md
docs/reports/: privacy_cleanup_report.md
projects/example/: README.md  literature_survey_sources.md  memory.example.md  task.md
prompts/: draft.md  judge.md  review.md  revise.md
scripts/: bootstrap.sh  import_check.py  start_ui.sh
src/: __init__.py  agents.py  benchmark_report.py  benchmarking.py  cli.py  cloud_free.py  config.py  constants.py  diagnostic.py  judge_output.py  literature_survey.py  llm.py  logging_config.py  main.py  metrics.py  mock_run.py  project_input.py  resume.py  run_analytics.py  run_compare.py  run_config.py  runner.py  runtime.py  session.py  storage.py
tests/: helpers.py  test_benchmark_report.py  test_benchmarking.py  test_cloud_free.py  test_config.py  test_diagnostic.py  test_judge_output.py  test_literature_survey.py  test_llm.py  test_logging_config.py  test_metrics.py  test_mock_run.py  test_project_input.py  test_resume.py  test_round_loop.py  test_run_analytics.py  test_run_compare.py  test_run_config.py  test_runner_stop_paths.py  test_runtime.py  test_session.py  test_storage.py  test_topic_context.py  test_ui_helpers.py
ui/: app.py  i18n.py  theme.py
(+5 files in other folders)
