[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research-agent"
version = "0.1.0"
description = "Local-first iterative research assistant powered by Ollama."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "PyYAML",
    "rich",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
auto-research-agent = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
