[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research-agent"
version = "0.1.0"
description = "Local-first iterative research assistant with Ollama, Gemini, and deterministic survey workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "requests",
    "PyYAML",
    "rich",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
auto-research-agent = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
